# madeinabyss-faiss-search

./: .gitignore  README.md  pyproject.toml  template.yaml
assets/: index.faiss  index.pkl
src/: function.py  requirements.txt
tools/: create_index.py  use_langchain.py  use_rag.py
